docs/sf-export/sfdx-raw/objects/RedTrack_Settings__mdt/RedTrack_Settings__mdt.object-meta.xml
<CustomObject>
    <label>RedTrack Settings</label>
    <pluralLabel>RedTrackSettings</pluralLabel>
</CustomObject>