docs/sf-export/sfdx-raw/objects/RedTrack_Settings__mdt/fields/Contract_Sent_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sent_Endpoint__c</fullName>
    <label>Contract Sent Endpoint</label>
    <type>Url</type>
</CustomField>