docs/sf-export/sfdx-raw/objects/RedTrack_Settings__mdt/fields/Inbound_Lead_Creation_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Lead_Creation_Endpoint__c</fullName>
    <label>Inbound Lead Creation Endpoint</label>
    <type>Url</type>
</CustomField>