docs/sf-export/sfdx-raw/objects/RedTrack_Settings__mdt/fields/Lead_Creation_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Lead_Creation_Endpoint__c</fullName>
    <label>Lead Creation Endpoint</label>
    <type>Url</type>
</CustomField>