docs/sf-export/sfdx-raw/objects/RedTrack_Settings__mdt/fields/Lead_Qualification_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Lead_Qualification_Endpoint__c</fullName>
    <label>Lead Qualification Endpoint</label>
    <type>Url</type>
</CustomField>