docs/sf-export/sfdx-raw/objects/RedTrack_Settings__mdt/fields/Opportunity_Closed_Won_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Closed_Won_Endpoint__c</fullName>
    <label>Opportunity Closed Won Endpoint</label>
    <type>Url</type>
</CustomField>