docs/sf-export/sfdx-raw/objects/RedTrack_Settings__mdt/fields/Opportunity_Creation_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Creation_Endpoint__c</fullName>
    <label>Opportunity Creation Endpoint</label>
    <type>Url</type>
</CustomField>