docs/sf-export/sfdx-raw/objects/RedTrack_Settings__mdt/fields/Opportunity_First_Payment_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_First_Payment_Endpoint__c</fullName>
    <label>Opportunity First Payment Endpoint</label>
    <type>Url</type>
</CustomField>